lab1/Test/L1-A-12-92.output
Error Type A at Line 3
Error Type A at Line 4
Error Type B at Line 12
Error Type A at Line 22
Error Type A at Line 23
Error Type B at Line 44
