lab1/Test/L1-A-12-92.cmm
float V3fM , PhzyM [ 1966723572 ] 

&;
struct \EYuvUuBThnx kHS ( ) {
  int Ikj5aVV = aN0uAr8_6ai9XW || V2X14A02OwU9xMQL 
    && sR6oLd_omEFjici6pD > t0BVdJGUtltI - Q12QucFgBhr 
    / - tmmrf ( n , kvWFcK5W = UU0AVNbpwlCqwAc = xzcQVL 
    = eTl6BME6LtzVIBGNM != pOa1ZED49_uEQ_Jd7 [ vgGxBF0GhAkZZL8 
    * - ( d6vh10a72yc || Rmyzs4 == GjzWCHVekHSTpbyygZw4 
    * ( Zy2Wh4ugV < GtltnAXraFn05pxqK ( DDeGvuHkaDGmlaCrzrU 
    = fAQHrJ3m4J <= L54U7ajZ0rxp ) / usiUBFnfK * - heE0B3nCvgpTqYqX 
    . - E78x509MIwMt_ ) >= - xXAj457i8GSV7 ) + 1449827476.529500413 
    . p4 / 1247884111 ] * ! tOGkN_r2kGw7Gkq7mV ( ) ) , 
    DQSVnYkPPPkvfxommI2Z ;
}
int ;
struct {
  int U1Wbk69hpvbyK1MHte ;
  struct {
    struct D {
    }g9e33fQ8lbe3qt9Xzg48 ;
  }VPljWWoVOCG53 $;
&};
int _TsUG9 
;
int ;
int ;
int Fr3oDG ( int l0q9OYk4 , int Q3_wrrtmV7rOV ) {
  PbzIqyMX5H ;
  cV5x0K ;
  paKFsT0ZlCACFqLdUju8 ;
  MxgADYN_DdLOsnxRB4 ;
  if ( C )   s9PYsHw ;
else   if ( P )   Lcvu ;


{
  }  if ( w )   while ( aC )   if ( iAAfK )   return 
    ZhgbwoBxT4GHFe4XQ8b8 ;
else   xiBJ08PC4RHNAWW 



}
